--- a/sample.tex
+++ b/sample.tex
@@ -10,6 +10,6 @@
 \section{内容}
 \LaTeX は文章やレポートの作成に便利です。数式も簡単に挿入できます。
 \subsection{数式の例}
-以下は二次方程式の解の公式です。
+以下は二次方程式の解の公式です。aaaaaaaa
 \[ x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a} \]
 \end{document}
